--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <nav>
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
+<li><a href="/publications">Publications</a></li>
+<li><a href="/education">Education</a></li>
 <li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
 </ul>
     </nav>
 <div class="container">
@@ -25,8 +25,7 @@
   
   <footer>
    <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">SIO Directory</a></li>
    </ul>
   </footer>
   </body>
