--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   
   <footer>
    <ul>
-   <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">SIO Directory</a></li>
+   <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
    </ul>
   </footer>
   </body>
