--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,6 @@
 <li><a href="/">Home</a></li>
 <li><a href="/publications">Publications</a></li>
 <li><a href="/education">Education</a></li>
-<li><a href="/cv">CV</a></li>
 </ul>
     </nav>
 <div class="container">
@@ -26,6 +25,7 @@
   <footer>
    <ul>
    <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
+   <li>Contact me at <a href="mlchandl@ucsd.edu">mlchandl at ucsd dot edu</a></li>
    </ul>
   </footer>
   </body>
