--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   <footer>
    <ul>
    <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
-   <li>Contact me at <a href="mlchandl@ucsd.edu">mlchandl at ucsd dot edu</a></li>
+   <li>Contact me at mlchandl@ucsd.edu</a></li>
    </ul>
   </footer>
   </body>
