--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <li><a href="/">Home</a></li>
 <li><a href="/publications">Publications</a></li>
 <li><a href="/education">Education</a></li>
-<li><a href="/research">Research Interests</a></li>
+<li><a href="/research">Research</a></li>
 </ul>
     </nav>
 <div class="container">
