--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
    <ul>
    <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
    <li>Contact me at mlchandl@ucsd.edu</a></li>
+   <li><a href="https://twitter.com/nz_mitch_">Twitter</a></li>
    </ul>
   </footer>
   </body>
