--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 <li><a href="/publications">Publications</a></li>
 <li><a href="/education">Education</a></li>
 <li><a href="/research">Research</a></li>
+<li><a href="/coding">Code</a></li>
 </ul>
     </nav>
 <div class="container">
