--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,10 @@
    <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
    <li>Contact me at mlchandl@ucsd.edu</a></li>
    <li><a href="https://twitter.com/nz_mitch_">Twitter</a></li>
-   <li>Website template: <a href="https://github.com/hankquinlan"></a>
+   </ul>
+   
+   <ul>
+   <li><a href="https://github.com/hankquinlan">Github website template</a>
    </ul>
   </footer>
   </body>
