--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
    </ul>
    
    <ul>
-   <li><a href="https://github.com/hankquinlan">Github website template</a>
+   <li><font size="-2"><a href="https://github.com/hankquinlan">Github website template</a></font>
    </ul>
   </footer>
   </body>
