--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,7 @@ p, ul { font-size: 1em; line-height: 1.4em; color: #333; }
 
 h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
-h2 { font-size: 2.7em; }
-h3 { font-size: 2.3em; }
-h4 { font-size: 1.9em; }
+h2 { font-size: 2em; }
 
 .center {
   display: block;
@@ -18,7 +16,7 @@ h4 { font-size: 1.9em; }
   width: 50%;
 }
 
-nav ul, footer ul { font-size: 0.8em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; }
+nav ul, footer ul { font-size: 0.8em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; color: #999; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
 
