--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,5 @@ h2 { font-size: 2em; }
 
 nav ul, footer ul { font-size: 0.8em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; color: #999; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
+
+footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
