--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,11 @@ body { margin: 60px auto; width: 80%; }
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
 
-p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; margin: 0px;  }
+p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; margin: 0px; }
 
 h1, h2, h3, h4 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1 { font-size: 3em;  }
-h2 { font-size: 2em; display:inline; }
+h2 { font-size: 2em; padding: 0px; margin: 0px; }
 
 .center {
   display: block;
