--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,12 @@ body { margin: 60px auto; width: 80%; }
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
 
-p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; margin: 0px; }
+p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
 
-h1 { font-size: 3em; padding: 0px; margin: 0px; }
-h2 { font-size: 2em; padding: 0px; margin: 0px; }
+h1, h2{ font-family: 'Sans-Serif'; padding: 0px; margin: 0px; }
+
+h1 { font-size: 3em; }
+h2 { font-size: 2em; }
 
 .center {
   display: block;
