--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
 
-h1, h2{ font-family: 'Sans-Serif'; padding: 0px; margin: 0px; }
+h1, h2{ font-family: 'Helvetica', 'Arial'; padding: 0px; margin: 0px; }
 
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
