--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@ body { margin: 60px auto; width: 80%; }
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
 
-p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
+p { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
+ul {font-size: 1em; line-height: 1em; color: #333; padding: 0px; }
 
-h1, h2{ font-family: 'Helvetica', 'Arial'; padding: 0px; margin: 0px; }
-
+h1, h2 { font-family: 'Helvetica', 'Arial'; padding: 0px; margin: 0px; }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
 
