--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@ a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
 
-
-h1, h2 { font-family: 'Helvetica', 'Arial'; padding: 0px; margin: 0px; }
+h1, h2 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
+h1, h2 { padding: 0px; margin: 0px; }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
 
