--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ h2 { font-size: 2em; }
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 30%;
+  padding: 5%;
 }
 
 nav ul, footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; color: #999; }
