--- a/css/main.css
+++ b/css/main.css
@@ -18,20 +18,15 @@ h2 { font-size: 2em; }
   padding: 5%;
 }
 
-
-
 footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; color: #999; }
 footer ul li { display: inline; margin-right: 20px; }
 footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
 
-
-
-nav ul {
-  list-style-type: none;
+nav ul {  list-style-type: none; 
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #999;
 }
 
 nav li {
@@ -46,7 +41,6 @@ nav li a {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
 nav li a:hover {
   background-color: #111;
 }
