--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@ body { margin: 60px auto; width: 80%; }
 a { text-decoration: none; color: #999; }
 a:hover { text-decoration: underline; }
 
-p, ul { font-size: 1em; line-height: 1.4em; color: #333; padding: 0px; }
+p, ul { font-size: 1em; line-height: 1.4em; color: #333; }
+p { padding: 0px; }
 
 h1, h2 { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
 h1, h2 { padding: 0px; margin: 0px; }
