--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
   <body>
     <nav>
 <ul>
-<li><a class="nav_act" href="/">Home</a></li>
-<li><a class="nav_act" href="/publications">Publications</a></li>
-<li><a class="nav_act" href="/education">Education</a></li>
-<li><a class="nav_act" href="/research">Research</a></li>
-<li><a class="nav_act" href="/coding">Code</a></li>
+<li><a href="/">Home</a></li>
+<li><a href="/publications">Publications</a></li>
+<li><a href="/education">Education</a></li>
+<li><a href="/research">Research</a></li>
+<li><a href="/coding">Code</a></li>
 </ul>
     </nav>
 	
