--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body { margin: 60px auto; width: 80%; }
 
-a { text-decoration: none; color: #555; }
+a { text-decoration: none; color: #666; }
 a:hover { text-decoration: underline; }
 
 p, ul { font-size: 1em; line-height: 1.4em; color: #333; }
@@ -27,7 +27,7 @@ nav ul {  list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #555;
+  background-color: #666;
 }
 
 nav li {
@@ -42,3 +42,9 @@ nav li a {
   text-decoration: none;
 }
 
+nav li a:hover:not(.nac_act) { }
+
+nav li a.nav_act {
+  color: white;
+  background-color: #000;
+}
