--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ h2 { font-size: 2em; }
   padding: 5%;
 }
 
+hr.blank {
+  border: 1px solid white;
+}
+
 footer ul { font-size: 1em; font-family: 'Helvetica', 'Arial', 'Sans-Serif'; padding: 0px; list-style: none; font-weight: bold; color: #777; }
 footer ul li { display: inline; margin-right: 20px; }
 footer { border-top: 1px solid #d5d5d5; font-size: .8em; }
