--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
     </nav>
 	
 <hr class="blank">
+
+<button onclick="topFunction()" id="top_but" title="Go to top">Top</button>
 		
 <div class="container">
 
@@ -38,6 +40,29 @@
    <li><font size="-2"><a href="https://github.com/hankquinlan">Github website template</a></font>
    </ul>
   </footer>
-  </body>
+  
+  <script>
+//Get the button
+var mybutton = document.getElementById("top_but");
 
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+  
+  
+  </body>
 </html>
