--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,6 @@ nav ul {  list-style-type: none;
   padding: 0;
   overflow: hidden;
   background-color: #777;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
 }
 
 nav li {
@@ -50,5 +47,25 @@ nav li a {
 }
 
 nav li a:hover {
+  background-color: #999;
+}
+
+#up_but {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 1em;
+  border: none;
+  outline: none;
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#up_but:hover {
   background-color: #999;
 }
