--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 	
 <hr class="blank">
 
-<button onclick="topFunction()" id="top_but" title="Go to top">Top</button>
+<button onclick="topFunction()" id="up_butn" title="Go to top">Top</button>
 		
 <div class="container">
 
@@ -43,7 +43,7 @@
   
   <script>
 //Get the button
-var mybutton = document.getElementById("top_but");
+var mybutton = document.getElementById("up_butn");
 
 // When the user scrolls down 20px from the top of the document, show the button
 window.onscroll = function() {scrollFunction()};
