--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
     
   <footer>
    <ul>
-   <li><a href="https://scripps.ucsd.edu/profiles/mlchandl">Link to my SIO directory page</a></li>
-   <li>Contact me at mlchandl@ucsd.edu</a></li>
+   <li><a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">Google Scholar</a></li>
+   <li>Email: mlchandl at ucsd dot edu</a></li>
    <li><a href="https://twitter.com/nz_mitch_">Twitter</a></li>
    </ul>
    
