--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
     <nav>
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/publications">Publications</a></li>
 <li><a href="/education">Education</a></li>
-<li><a href="/research">Research</a></li>
+<li><a href="/publications">Publications</a></li>
+<li><a href="/twitter">Twitter Posters</a></li>
 </ul>
     </nav>
 	
