--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,11 @@ nav li a:hover{
 	background-color: #999;
 	}
 
+navbar a.active {
+  background-color: #328da8;
+  color: white;
+}
+
 footer ul{ 
 	font-size: 1em; 
 	font-family: 'Helvetica', 'Arial', 'Sans-Serif'; 
