--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ nav li a:hover{
 	background-color: #999;
 	}
 
-navbar li a.active {
+nav li a.active {
   background-color: #328da8;
   color: white;
 }
